# argparse

./: .buildinfo  CMakeLists.txt  README.md
.doctrees/: environment.pickle  index.doctree  timer.doctree
cmake/: argparseConfig.make.in
include/core/argparse/: argp.h  context.h  floating_with_suffix.h  integer_with_suffix.h  option.h  parser.h
include/core/argparse/detail/: error.h  option.h  parser.h
src/core/argparse/: base.cpp  context.cpp  error.cpp
src/core/argparse/detail/: base.cpp  context.cpp  error.cpp
src/tools/: argparse0.cpp  argparse1.cpp  argparse_flag.cpp  argparse_optional.cpp  argparse_value.cpp  argparse_values.cpp
test/: CMakeLists.txt
test/src/core/argparse/: test_argparse_basic.cpp  test_argparse_floating_with_suffix.cpp  test_argparse_integer_with_suffix.cpp
